<resources>
    <string name="app_name">riscoCardiaco</string>
    <string name="tituloapp">Avaliação do risco cardíaco</string>
    <string name="tituloappacessibilidade">Nome do aplicativo</string>
    <string name="imagemacessibilidade">Desenho de um coração humano</string>
    <string name="botaoiniciar">Iniciar</string>
    <string name="botaoiniciaracessibilidade">Botão para iniciar a avaliação</string>
    <string name="botaoproximo">Próximo</string>
    <string name="botaoproximoacessibilidade">Botão para ir para a próxima página após responder</string>

    <string name="tituloidade">Digite sua idade</string>
    <string name="de10a20">10 a 20 anos</string>
    <string name="de21a30">21 a 30 anos</string>
    <string name="de31a40">31 a 40 anos</string>
    <string name="de41a50">41 a 50 anos</string>
    <string name="de51a60">51 a 60 anos</string>
    <string name="acima61">Acima de 61 anos</string>

    <string name="titulogenero">Selecione seu gênero</string>
    <string name="fm40">Feminino c/ menos de 40 anos</string>
    <string name="f40a50">Feminino de 40 a 50 anos</string>
    <string name="f50">Feminino c/ mais de 50 anos</string>
    <string name="m">Masculino</string>
    <string name="mbe">Masculino de baixa estatura</string>
    <string name="mbec">Masculino de baixa estatura e calvo</string>

    <string name="titulopeso">Selecione seu peso</string>
    <string name="i2">Inferior a 2,3Kg do peso normal</string>
    <string name="med">Menos de 2,3 a mais de 2,3Kg do peso normal</string>
    <string name="a2a9">De 2,4 a 9,0Kg acima do peso normal</string>
    <string name="a9a15">De 9,1 a 15,9Kg acima do peso normal</string>
    <string name="a16a22">De 16 a 22,9Kg acima do peso normal</string>
    <string name="a23">Mais de 23Kg acima do peso normal</string>

    <string name="tituloatividade">Selecione a frequência com que faz atividade física</string>
    <string name="atvd1">Esforço profissional e recreativo intenso</string>
    <string name="atvd2">Esforço profissional e recreativo moderado</string>
    <string name="atvd3">Trabalho sedentário e esforço recreativo intenso</string>
    <string name="atvd4">Trabalho sedentário e esforço recreativo moderado</string>
    <string name="atvd5">Trabalho sedentário e esforço recreativo leve</string>
    <string name="atvd6">Ausência completa de qualquer exercício</string>

    <string name="titulofumante">Selecione de acordo com seus hábitos</string>
    <string name="nf">Não fumante</string>
    <string name="cc">Charuto e/ou cachimbo</string>
    <string name="c10m">10 cigarros ou menos por dia</string>
    <string name="c11a20">11 a 20 cigarros por dia</string>
    <string name="c21a30">21 a 30 cigarros por dia</string>
    <string name="cmais31">mais de 31 cigarros por dia</string>

    <string name="titulopressao">Selecione o valor de sua pressão</string>
    <string name="s100a119">Sistólica de 100 a 119 mmHg</string>
    <string name="s120a139">Sistólica de 120 a 139 mmHg</string>
    <string name="s140a159">Sistólica de 140 a 159 mmHg</string>
    <string name="s160a179">Sistólica de 160 a 179 mmHg</string>
    <string name="s180a199">Sistólica de 180 a 199 mmHg</string>
    <string name="s200">Sistólica de 200 mmHg ou mais</string>

    <string name="titulodoencafamilia">Selecione sobre o histórico da sua família</string>
    <string name="nd">Nenhuma história conhecida de cardiopatia</string>
    <string name="pmais60">1 parente c/ doença cardiaca e mais de 60 anos</string>
    <string name="p2mais60">2 parentes c/ doença cardiaca e mais de 60 anos</string>
    <string name="pc60menos">1 parente c/ doença cardiaca e menos de 60 anos</string>
    <string name="p2menos60">2 parentes c/ doença cardiaca e mais de 60 anos</string>
    <string name="p3menos60">3 parentes c/ doença cardiaca e menos de 60 anos</string>

    <string name="titulocolesterol">Selecione o valor do seu colesterol</string>
    <string name="menos180">Abaixo de 180 ou a dieta não contém gorduras animais</string>
    <string name="de181a205">De 181 a 205 ou a dieta contém 10% de gorduras animais</string>
    <string name="de206a230">De 206 a 230 ou a dieta contém 20% de gorduras animais</string>
    <string name="de231a255">De 231 a 255 ou a dieta contém 30% de gorduras animais</string>
    <string name="de256a280">De 256 a 280 ou a dieta contém 40% de gorduras animais</string>
    <string name="mais281">Acima de 281 ou a dieta contém 50% de gorduras animais</string>

    <string name="pontuacao">Sua pontuação foi:</string>
    <string name="semrisco">Seu risco é: sem risco</string>
    <string name="abaixomedia">Seu risco é: abaixo da média</string>
    <string name="medio">Seu risco é: médio</string>
    <string name="moderado">Seu risco é: moderado</string>
    <string name="alto">Seu risco é: alto</string>
    <string name="muitoalto">Seu risco é: muito alto</string>
    <string name="inicio">Voltar para o início</string>
    <string name="compartilhar">Compartilhar resultado</string>
    <string name="aviso">Esta avaliação não substitui uma consulta médica!</string>

</resources>